--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Symbol Cards by Colin McAllister</title>
+    <title>My Symbolcards Reading</title>
     <style>
         body { font-family: Arial, sans-serif; background: linear-gradient(to bottom, #e0f7fa, #b2ebf2); color: #333; text-align: center; padding: 20px; }
         h1 { color: #006064; }
@@ -26,7 +26,7 @@
     </style>
 </head>
 <body>
-    <h1>Symbol Cards by Colin McAllister</h1>
+    <h1>My Symbolcards Reading</h1>
     <p>Draw your daily guidance or weekly insight – completely free.</p>
     
     <div class="buttons">
@@ -41,24 +41,78 @@
 
     <script>
         const cardUrls = [
-            "https://i.ibb.co/fdztccmY/symbol-card.jpg",
-            "https://i.ibb.co/xKFC3dnK/symbol-card.jpg",
-            "https://i.ibb.co/wFStd1SV/symbol-card.jpg",
-            "https://i.ibb.co/hR1mZ5M6/symbol-card.jpg",
-            "https://i.ibb.co/QFwqFP5m/symbol-card.jpg",
-            "https://i.ibb.co/XxXYCJgx/symbol-card.jpg",
-            "https://i.ibb.co/mVWw7JJX/symbol-card.jpg",
-            "https://i.ibb.co/cKjR6Mm5/symbol-card.jpg",
-            "https://i.ibb.co/Kcz3RCPp/symbol-card.jpg",
-            "https://i.ibb.co/9mhHs75X/symbol-card.jpg",
-            "https://i.ibb.co/JYnbSpt/symbol-card.jpg",
-            "https://i.ibb.co/F4GR4Zpc/symbol-card.jpg",
-            "https://i.ibb.co/8gRyn8Xh/symbol-card.jpg",
-            "https://i.ibb.co/WNCHS4TV/symbol-card.jpg",
-            "https://i.ibb.co/G3fmTK9B/symbol-card.jpg",
-            "https://i.ibb.co/jkgGd4NV/symbol-card.jpg",
-            "https://i.ibb.co/kRygZ9P/symbol-card.jpg",
-            "https://i.ibb.co/bkF9d0x/symbol-card.jpg"
+            "https://i.ibb.co/20YgdK7C/symbol-card.jpg", // 1 Start
+            "https://i.ibb.co/S7HhYTBW/symbol-card.jpg", // 2 Health
+            "https://i.ibb.co/sp2rg8vn/symbol-card.jpg", // 3 Strength
+            "https://i.ibb.co/bjjLkHty/symbol-card.jpg", // 4 Understanding
+            "https://i.ibb.co/bRCQHQyn/symbol-card.jpg", // 5 Home
+            "https://i.ibb.co/Xx9H0cCL/symbol-card.jpg", // 6 Dependence
+            "https://i.ibb.co/5WY7yzZC/symbol-card.jpg", // 7 Alliance
+            "https://i.ibb.co/dwcp6Z5z/symbol-card.jpg", // 8 Luck
+            "https://i.ibb.co/tTL06pC4/symbol-card.jpg", // 9 Activities
+            "https://i.ibb.co/7JmgnjT3/symbol-card.jpg", // 10 Prosperity
+            "https://i.ibb.co/8DBgZgfq/symbol-card.jpg", // 11 Obstruction
+            "https://i.ibb.co/fVgD4XBg/symbol-card.jpg", // 12 Tenderness
+            "https://i.ibb.co/HDnjzM6G/symbol-card.jpg", // 13 Breach
+            "https://i.ibb.co/fY9Pzbh7/symbol-card.jpg", // 14 Visitors
+            "https://i.ibb.co/Fks37Fyg/symbol-card.jpg", // 15 Money
+            "https://i.ibb.co/67SWn5v2/symbol-card.jpg", // 16 Departure
+            "https://i.ibb.co/KT0HH9m/symbol-card.jpg", // 17 Conquering
+            "https://i.ibb.co/RkbkHrV5/symbol-card.jpg", // 18 Dissatisfaction
+            "https://i.ibb.co/RGh5DJWC/symbol-card.jpg", // 19 Clarity
+            "https://i.ibb.co/5xtzXQSb/symbol-card.jpg", // 20 Solution
+            "https://i.ibb.co/ZzHTbCm7/symbol-card.jpg", // 21 Friendship
+            "https://i.ibb.co/BHb4NbLQ/symbol-card.jpg", // 22 Farewell
+            "https://i.ibb.co/9mVXsBpd/symbol-card.jpg", // 23 Sustainability
+            "https://i.ibb.co/8LmmRyhY/symbol-card.jpg", // 24 Disagreement
+            "https://i.ibb.co/QvCL6ZBG/symbol-card.jpg", // 25 Future
+            "https://i.ibb.co/99SY1P91/symbol-card.jpg", // 26 Suspicion, doubt
+            "https://i.ibb.co/4wgJQL6d/symbol-card.jpg", // 27 Relocation
+            "https://i.ibb.co/DgGvgC0S/symbol-card.jpg", // 28 Ownership
+            "https://i.ibb.co/6SpQTPy/symbol-card.jpg", // 29 Slander
+            "https://i.ibb.co/1GYmjyTb/symbol-card.jpg", // 30 Overseas
+            "https://i.ibb.co/hRsG8fs0/symbol-card.jpg", // 31 Message
+            "https://i.ibb.co/HDs97cjQ/symbol-card.jpg", // 32 Choice
+            "https://i.ibb.co/Ndys9XWB/symbol-card.jpg", // 33 Authority
+            "https://i.ibb.co/ymwzMfNQ/symbol-card.jpg", // 34 Meeting
+            "https://i.ibb.co/spRkjZN9/symbol-card.jpg", // 35 Secrets
+            "https://i.ibb.co/9k7hrnHf/symbol-card.jpg", // 36 Bridging
+            "https://i.ibb.co/20YgdK7C/symbol-card.jpg", // 37 Gift
+            "https://i.ibb.co/S7HhYTBW/symbol-card.jpg", // 38 Decision
+            "https://i.ibb.co/sp2rg8vn/symbol-card.jpg", // 39 Discovery
+            "https://i.ibb.co/bjjLkHty/symbol-card.jpg", // 40 Satisfaction
+            "https://i.ibb.co/bRCQHQyn/symbol-card.jpg", // 41 Continuing
+            "https://i.ibb.co/Xx9H0cCL/symbol-card.jpg", // 42 Study
+            "https://i.ibb.co/5WY7yzZC/symbol-card.jpg", // 43 Sympathy
+            "https://i.ibb.co/dwcp6Z5z/symbol-card.jpg", // 44 Unfathomable
+            "https://i.ibb.co/tTL06pC4/symbol-card.jpg", // 45 Warning
+            "https://i.ibb.co/7JmgnjT3/symbol-card.jpg", // 46 Patience
+            "https://i.ibb.co/8DBgZgfq/symbol-card.jpg", // 47 Admissibility
+            "https://i.ibb.co/fVgD4XBg/symbol-card.jpg", // 48 Loneliness
+            "https://i.ibb.co/HDnjzM6G/symbol-card.jpg", // 49 Past
+            "https://i.ibb.co/fY9Pzbh7/symbol-card.jpg", // 50 Anger
+            "https://i.ibb.co/Fks37Fyg/symbol-card.jpg", // 51 Fright
+            "https://i.ibb.co/67SWn5v2/symbol-card.jpg", // 52 Fulfilment
+            "https://i.ibb.co/KT0HH9m/symbol-card.jpg", // 53 Change
+            "https://i.ibb.co/RkbkHrV5/symbol-card.jpg", // 54 Sadness
+            "https://i.ibb.co/RGh5DJWC/symbol-card.jpg", // 55 Loss
+            "https://i.ibb.co/5xtzXQSb/symbol-card.jpg", // 56 Certainty
+            "https://i.ibb.co/ZzHTbCm7/symbol-card.jpg", // 57 Clearance
+            "https://i.ibb.co/BHb4NbLQ/symbol-card.jpg", // 58 Resignation
+            "https://i.ibb.co/9mVXsBpd/symbol-card.jpg", // 59 Jealousy
+            "https://i.ibb.co/8LmmRyhY/symbol-card.jpg", // 60 Trap
+            "https://i.ibb.co/QvCL6ZBG/symbol-card.jpg", // 61 Professionalism
+            "https://i.ibb.co/99SY1P91/symbol-card.jpg", // 62 Commitment
+            "https://i.ibb.co/4wgJQL6d/symbol-card.jpg", // 63 Protection
+            "https://i.ibb.co/DgGvgC0S/symbol-card.jpg", // 64 Unexpected
+            "https://i.ibb.co/6SpQTPy/symbol-card.jpg", // 65 Removal
+            "https://i.ibb.co/1GYmjyTb/symbol-card.jpg", // 66 Complications
+            "https://i.ibb.co/hRsG8fs0/symbol-card.jpg", // 67 Domination
+            "https://i.ibb.co/HDs97cjQ/symbol-card.jpg", // 68 Abroad
+            "https://i.ibb.co/Ndys9XWB/symbol-card.jpg", // 69 Ending
+            "https://i.ibb.co/ymwzMfNQ/symbol-card.jpg", // 70 Temporality
+            "https://i.ibb.co/spRkjZN9/symbol-card.jpg", // 71 Uncertainty
+            "https://i.ibb.co/9k7hrnHf/symbol-card.jpg" // 72 Optimism
         ];
 
         const totalCards = cardUrls.length;
