--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+HTML<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -41,78 +41,78 @@
 
     <script>
         const cardUrls = [
-            "https://i.ibb.co/20YgdK7C/symbol-card.jpg", // 1 Start
-            "https://i.ibb.co/S7HhYTBW/symbol-card.jpg", // 2 Health
-            "https://i.ibb.co/sp2rg8vn/symbol-card.jpg", // 3 Strength
-            "https://i.ibb.co/bjjLkHty/symbol-card.jpg", // 4 Understanding
-            "https://i.ibb.co/bRCQHQyn/symbol-card.jpg", // 5 Home
-            "https://i.ibb.co/Xx9H0cCL/symbol-card.jpg", // 6 Dependence
-            "https://i.ibb.co/5WY7yzZC/symbol-card.jpg", // 7 Alliance
-            "https://i.ibb.co/dwcp6Z5z/symbol-card.jpg", // 8 Luck
-            "https://i.ibb.co/tTL06pC4/symbol-card.jpg", // 9 Activities
-            "https://i.ibb.co/7JmgnjT3/symbol-card.jpg", // 10 Prosperity
-            "https://i.ibb.co/8DBgZgfq/symbol-card.jpg", // 11 Obstruction
-            "https://i.ibb.co/fVgD4XBg/symbol-card.jpg", // 12 Tenderness
-            "https://i.ibb.co/HDnjzM6G/symbol-card.jpg", // 13 Breach
-            "https://i.ibb.co/fY9Pzbh7/symbol-card.jpg", // 14 Visitors
-            "https://i.ibb.co/Fks37Fyg/symbol-card.jpg", // 15 Money
-            "https://i.ibb.co/67SWn5v2/symbol-card.jpg", // 16 Departure
-            "https://i.ibb.co/KT0HH9m/symbol-card.jpg", // 17 Conquering
-            "https://i.ibb.co/RkbkHrV5/symbol-card.jpg", // 18 Dissatisfaction
-            "https://i.ibb.co/RGh5DJWC/symbol-card.jpg", // 19 Clarity
-            "https://i.ibb.co/5xtzXQSb/symbol-card.jpg", // 20 Solution
-            "https://i.ibb.co/ZzHTbCm7/symbol-card.jpg", // 21 Friendship
-            "https://i.ibb.co/BHb4NbLQ/symbol-card.jpg", // 22 Farewell
-            "https://i.ibb.co/9mVXsBpd/symbol-card.jpg", // 23 Sustainability
-            "https://i.ibb.co/8LmmRyhY/symbol-card.jpg", // 24 Disagreement
-            "https://i.ibb.co/QvCL6ZBG/symbol-card.jpg", // 25 Future
-            "https://i.ibb.co/99SY1P91/symbol-card.jpg", // 26 Suspicion, doubt
-            "https://i.ibb.co/4wgJQL6d/symbol-card.jpg", // 27 Relocation
-            "https://i.ibb.co/DgGvgC0S/symbol-card.jpg", // 28 Ownership
-            "https://i.ibb.co/6SpQTPy/symbol-card.jpg", // 29 Slander
-            "https://i.ibb.co/1GYmjyTb/symbol-card.jpg", // 30 Overseas
-            "https://i.ibb.co/hRsG8fs0/symbol-card.jpg", // 31 Message
-            "https://i.ibb.co/HDs97cjQ/symbol-card.jpg", // 32 Choice
-            "https://i.ibb.co/Ndys9XWB/symbol-card.jpg", // 33 Authority
-            "https://i.ibb.co/ymwzMfNQ/symbol-card.jpg", // 34 Meeting
-            "https://i.ibb.co/spRkjZN9/symbol-card.jpg", // 35 Secrets
-            "https://i.ibb.co/9k7hrnHf/symbol-card.jpg", // 36 Bridging
-            "https://i.ibb.co/20YgdK7C/symbol-card.jpg", // 37 Gift
-            "https://i.ibb.co/S7HhYTBW/symbol-card.jpg", // 38 Decision
-            "https://i.ibb.co/sp2rg8vn/symbol-card.jpg", // 39 Discovery
-            "https://i.ibb.co/bjjLkHty/symbol-card.jpg", // 40 Satisfaction
-            "https://i.ibb.co/bRCQHQyn/symbol-card.jpg", // 41 Continuing
-            "https://i.ibb.co/Xx9H0cCL/symbol-card.jpg", // 42 Study
-            "https://i.ibb.co/5WY7yzZC/symbol-card.jpg", // 43 Sympathy
-            "https://i.ibb.co/dwcp6Z5z/symbol-card.jpg", // 44 Unfathomable
-            "https://i.ibb.co/tTL06pC4/symbol-card.jpg", // 45 Warning
-            "https://i.ibb.co/7JmgnjT3/symbol-card.jpg", // 46 Patience
-            "https://i.ibb.co/8DBgZgfq/symbol-card.jpg", // 47 Admissibility
-            "https://i.ibb.co/fVgD4XBg/symbol-card.jpg", // 48 Loneliness
-            "https://i.ibb.co/HDnjzM6G/symbol-card.jpg", // 49 Past
-            "https://i.ibb.co/fY9Pzbh7/symbol-card.jpg", // 50 Anger
-            "https://i.ibb.co/Fks37Fyg/symbol-card.jpg", // 51 Fright
-            "https://i.ibb.co/67SWn5v2/symbol-card.jpg", // 52 Fulfilment
-            "https://i.ibb.co/KT0HH9m/symbol-card.jpg", // 53 Change
-            "https://i.ibb.co/RkbkHrV5/symbol-card.jpg", // 54 Sadness
-            "https://i.ibb.co/RGh5DJWC/symbol-card.jpg", // 55 Loss
-            "https://i.ibb.co/5xtzXQSb/symbol-card.jpg", // 56 Certainty
-            "https://i.ibb.co/ZzHTbCm7/symbol-card.jpg", // 57 Clearance
-            "https://i.ibb.co/BHb4NbLQ/symbol-card.jpg", // 58 Resignation
-            "https://i.ibb.co/9mVXsBpd/symbol-card.jpg", // 59 Jealousy
-            "https://i.ibb.co/8LmmRyhY/symbol-card.jpg", // 60 Trap
-            "https://i.ibb.co/QvCL6ZBG/symbol-card.jpg", // 61 Professionalism
-            "https://i.ibb.co/99SY1P91/symbol-card.jpg", // 62 Commitment
-            "https://i.ibb.co/4wgJQL6d/symbol-card.jpg", // 63 Protection
-            "https://i.ibb.co/DgGvgC0S/symbol-card.jpg", // 64 Unexpected
-            "https://i.ibb.co/6SpQTPy/symbol-card.jpg", // 65 Removal
-            "https://i.ibb.co/1GYmjyTb/symbol-card.jpg", // 66 Complications
-            "https://i.ibb.co/hRsG8fs0/symbol-card.jpg", // 67 Domination
-            "https://i.ibb.co/HDs97cjQ/symbol-card.jpg", // 68 Abroad
-            "https://i.ibb.co/Ndys9XWB/symbol-card.jpg", // 69 Ending
-            "https://i.ibb.co/ymwzMfNQ/symbol-card.jpg", // 70 Temporality
-            "https://i.ibb.co/spRkjZN9/symbol-card.jpg", // 71 Uncertainty
-            "https://i.ibb.co/9k7hrnHf/symbol-card.jpg" // 72 Optimism
+            "https://i.ibb.co/20YgdK7C/symbol-card.jpg",
+            "https://i.ibb.co/S7HhYTBW/symbol-card.jpg",
+            "https://i.ibb.co/sp2rg8vn/symbol-card.jpg",
+            "https://i.ibb.co/bjjLkHty/symbol-card.jpg",
+            "https://i.ibb.co/bRCQHQyn/symbol-card.jpg",
+            "https://i.ibb.co/Xx9H0cCL/symbol-card.jpg",
+            "https://i.ibb.co/5WY7yzZC/symbol-card.jpg",
+            "https://i.ibb.co/dwcp6Z5z/symbol-card.jpg",
+            "https://i.ibb.co/tTL06pC4/symbol-card.jpg",
+            "https://i.ibb.co/7JmgnjT3/symbol-card.jpg",
+            "https://i.ibb.co/8DBgZgfq/symbol-card.jpg",
+            "https://i.ibb.co/fVgD4XBg/symbol-card.jpg",
+            "https://i.ibb.co/HDnjzM6G/symbol-card.jpg",
+            "https://i.ibb.co/fY9Pzbh7/symbol-card.jpg",
+            "https://i.ibb.co/Fks37Fyg/symbol-card.jpg",
+            "https://i.ibb.co/67SWn5v2/symbol-card.jpg",
+            "https://i.ibb.co/KT0HH9m/symbol-card.jpg",
+            "https://i.ibb.co/RkbkHrV5/symbol-card.jpg",
+            "https://i.ibb.co/RGh5DJWC/symbol-card.jpg",
+            "https://i.ibb.co/5xtzXQSb/symbol-card.jpg",
+            "https://i.ibb.co/ZzHTbCm7/symbol-card.jpg",
+            "https://i.ibb.co/BHb4NbLQ/symbol-card.jpg",
+            "https://i.ibb.co/9mVXsBpd/symbol-card.jpg",
+            "https://i.ibb.co/8LmmRyhY/symbol-card.jpg",
+            "https://i.ibb.co/QvCL6ZBG/symbol-card.jpg",
+            "https://i.ibb.co/99SY1P91/symbol-card.jpg",
+            "https://i.ibb.co/4wgJQL6d/symbol-card.jpg",
+            "https://i.ibb.co/DgGvgC0S/symbol-card.jpg",
+            "https://i.ibb.co/6SpQTPy/symbol-card.jpg",
+            "https://i.ibb.co/1GYmjyTb/symbol-card.jpg",
+            "https://i.ibb.co/hRsG8fs0/symbol-card.jpg",
+            "https://i.ibb.co/HDs97cjQ/symbol-card.jpg",
+            "https://i.ibb.co/Ndys9XWB/symbol-card.jpg",
+            "https://i.ibb.co/ymwzMfNQ/symbol-card.jpg",
+            "https://i.ibb.co/spRkjZN9/symbol-card.jpg",
+            "https://i.ibb.co/9k7hrnHf/symbol-card.jpg",
+            "https://i.ibb.co/20YgdK7C/symbol-card.jpg",
+            "https://i.ibb.co/S7HhYTBW/symbol-card.jpg",
+            "https://i.ibb.co/sp2rg8vn/symbol-card.jpg",
+            "https://i.ibb.co/bjjLkHty/symbol-card.jpg",
+            "https://i.ibb.co/bRCQHQyn/symbol-card.jpg",
+            "https://i.ibb.co/Xx9H0cCL/symbol-card.jpg",
+            "https://i.ibb.co/5WY7yzZC/symbol-card.jpg",
+            "https://i.ibb.co/dwcp6Z5z/symbol-card.jpg",
+            "https://i.ibb.co/tTL06pC4/symbol-card.jpg",
+            "https://i.ibb.co/7JmgnjT3/symbol-card.jpg",
+            "https://i.ibb.co/8DBgZgfq/symbol-card.jpg",
+            "https://i.ibb.co/fVgD4XBg/symbol-card.jpg",
+            "https://i.ibb.co/HDnjzM6G/symbol-card.jpg",
+            "https://i.ibb.co/fY9Pzbh7/symbol-card.jpg",
+            "https://i.ibb.co/Fks37Fyg/symbol-card.jpg",
+            "https://i.ibb.co/67SWn5v2/symbol-card.jpg",
+            "https://i.ibb.co/KT0HH9m/symbol-card.jpg",
+            "https://i.ibb.co/RkbkHrV5/symbol-card.jpg",
+            "https://i.ibb.co/RGh5DJWC/symbol-card.jpg",
+            "https://i.ibb.co/5xtzXQSb/symbol-card.jpg",
+            "https://i.ibb.co/ZzHTbCm7/symbol-card.jpg",
+            "https://i.ibb.co/BHb4NbLQ/symbol-card.jpg",
+            "https://i.ibb.co/9mVXsBpd/symbol-card.jpg",
+            "https://i.ibb.co/8LmmRyhY/symbol-card.jpg",
+            "https://i.ibb.co/QvCL6ZBG/symbol-card.jpg",
+            "https://i.ibb.co/99SY1P91/symbol-card.jpg",
+            "https://i.ibb.co/4wgJQL6d/symbol-card.jpg",
+            "https://i.ibb.co/DgGvgC0S/symbol-card.jpg",
+            "https://i.ibb.co/6SpQTPy/symbol-card.jpg",
+            "https://i.ibb.co/1GYmjyTb/symbol-card.jpg",
+            "https://i.ibb.co/hRsG8fs0/symbol-card.jpg",
+            "https://i.ibb.co/HDs97cjQ/symbol-card.jpg",
+            "https://i.ibb.co/Ndys9XWB/symbol-card.jpg",
+            "https://i.ibb.co/ymwzMfNQ/symbol-card.jpg",
+            "https://i.ibb.co/spRkjZN9/symbol-card.jpg",
+            "https://i.ibb.co/9k7hrnHf/symbol-card.jpg"
         ];
 
         const totalCards = cardUrls.length;
